# libelfxx

./: README.md  libelf.cpp  libelf.hpp  libelfxx.cpp  meson.build  test.cpp  test.sh
include/: libelfxx.hpp  meson.build
include/libelfxx/: binary_reader.hpp  ehdr.hpp  sys_types.hpp
src/: binary_reader.cpp  libelfxx.cpp  meson.build
src/printer/: ehdr.cpp  meson.build
